# sfml-template

./: CMakeLists.txt  run.sh
src/: main.cpp
